--- a/app/views/amortization/show.html.erb
+++ b/app/views/amortization/show.html.erb
@@ -7,8 +7,8 @@
     <th>Total Interest Amount</th>
     <th>Principal Amount</th>
     <th>Closing Amount</th>
-    <th>Month of emi</th>
-    <th>Emi</th>
+    <th>Month</th>
+    <th>Emi To be paid</th>
   </tr>
   <% @payment_details.each do |payment_detail| %>
    <tr>
